tests/res/construction/init_this_as_argument.say
// Passing the raw `this` to a function would expose a half-built object.
fn keep(t?) {
}
type T {
    pub x;
    init() {
        this.x = 1;
        keep(this); // error: the partially-constructed 'this' cannot be used as a value here; inside init it may only assign or read its own fields
    }
}
